--- a/app/src/main/res/drawable/orange_button_background.xml
+++ b/app/src/main/res/drawable/orange_button_background.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid
-        android:color="@color/layout_green" >
-    </solid>
-    <corners
-        android:radius="200dp">
+    <solid android:color="@color/orange" />
+    <corners android:radius="10dp" >
     </corners>
 
 </shape>
