--- a/app/src/main/res/drawable/round_bg2.xml
+++ b/app/src/main/res/drawable/round_bg2.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid
-        android:color="@color/layout_green" >
-    </solid>
-    <corners
-        android:radius="200dp">
+    <stroke
+        android:width="2dp"
+        android:color="#EAEAEA" >
+    </stroke>
+    <corners android:radius="10dp">
     </corners>
 
 </shape>
