--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -11,7 +11,7 @@
         android:title="@string/action_material" />
 
     <item
-        android:id="@+id/navigation_diploma"
+        android:id="@+id/navigation_account"
         android:icon="@drawable/ic_account"
         android:title="@string/action_account" />
 
@@ -21,7 +21,7 @@
         android:title="@string/action_notification" />
 
     <item
-        android:id="@+id/navigation_profile"
+        android:id="@+id/navigation_cart"
         android:icon="@drawable/ic_shopping_cart"
         android:title="@string/action_cart" />
 
